--- a/index.html
+++ b/index.html
@@ -16,8 +16,30 @@
 </head>
 
 <body>
-   
+   <!-- Navbar -->
+   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class='container'>
+         <a href="" class="navbar-brand">Frontend Bootcamp</a>
 
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navmenu">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+
+         <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                  <a href="#learn" class="nav-link">What You'll Learn</a>
+               </li>
+               <li class="nav-item">
+                  <a href="#questions" class="nav-link">Questions</a>
+               </li>
+               <li class="nav-item">
+                  <a href="#instructors" class="nav-link">Instructors</a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </nav>
 
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
